implement simple json serializer